# FlySuite

./: README.md  pyproject.toml
data/: wing_pattern_fmech.npy
examples/: example.py
src/flysuite/: __init__.py  environments.py  fly_envs.py
src/flysuite/flybody/fruitfly/build_fruitfly/: add_flyid_labels.py  make_fruitfly.py
src/flysuite/flybody/tasks/: base.py  flight_imitation.py  pattern_generators.py  rewards.py  template_task.py  trajectory_loaders.py  vision_flight.py  walk_imitation.py
src/flysuite/flybody/tasks/arenas/: hills.py
src/flysuite/model/: fruitfly.py
src/flysuite/model/build_fruitfly/: add_flyid_labels.py  fuse_fruitfly.py
src/flysuite/tasks/: base.py  flight_imitation.py  pattern_generators.py  rewards.py  synthetic_trajectories.py  task_utils.py  template_task.py  trajectory_loaders.py  vision_flight.py  walk_imitation.py  walk_on_ball.py
