[project]
name = "flysuite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dm-control>=1.0.25",
    "dm-env>=1.6",
    "numpy>=2.1.3",
]

[project.optional-dependencies]
trajectories = [
    "h5py>=3.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
